--- a/index.html
+++ b/index.html
@@ -8,20 +8,32 @@
     <link rel="stylesheet" href="design.css">
 </head>
 <body>
-    <div class="box"></div>
-    <div class="navbar">
-        <ul>
-            <div class="title">
-                <li class="logo"><a href="">Code</a></li>
+        <div class="box"></div>
+        <div class="navbar">
+            <ul>
+                <div class="title">
+                    <li class="logo" style="font-weight: 800;"><a href="">Code</a></li>
+                </div>
+    
+                <div class="title-rest">
+                    <li><a href="#Projects">Projects</a></li>
+                    <li><a href="">Accomplishments</a></li>
+                    <li><a href="">Github</a></li>
+                    <li><a href="">Contact us</a></li>
+                </div>
+            </ul>
+        </div>
+        <div class="main-content">
+            <p class="myName">I'm Aadhav!</p>
+            <div class="text">
+            <p class="intro">I possess expertise in HTML and CSS as a frontend 
+                developer, and I am also proficient in C++ programming language, particularly in working with Arduino boards.
+                I am presently pursuing my studies at Talent Campus Bodensee situated in Kreuzlingen, Thurgau.</p>
             </div>
-
-            <div class="title-rest">
-                <li><a href="">Projects</a></li>
-                <li><a href="">Accomplishments</a></li>
-                <li><a href="">Github</a></li>
-                <li><a href="">Contact us</a></li>
-            </div>
-        </ul>
+        </div>
+        <img class="image" src="potrait.JPG" alt="Potrait">
+    <div class="projects" id="Projects">
+        
     </div>
 </body>
 </html>
